--- a/component/head-foot.html
+++ b/component/head-foot.html
@@ -31,20 +31,7 @@
 
                         <a>收藏本站</a>
                     </span>
-                    <span class="middle">
 
-                        <a>邮件系统</a>
-                    </span>
-                    <span class="middle">
-                        <a>OA系统</a>
-                    </span>
-
-                    <span class="last">
-                        字体:
-                        <span>
-                            简体
-                        </span>
-                    </span>
                 </span>
 
                 <span class="head-search">
@@ -62,9 +49,9 @@
                     <li><a href="../index.html">网站首页</a></li>
                     <li><a href="../component/newsPage.html">新闻动态</a></li>
                     <li><a href="../component/zwgkPage.html">政务公开</a></li>
-                    <li><a>专题聚焦</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
                     <li><a href="../component/hdjl.html">互动交流</a></li>
-                    <li><a class="nav-last-item">网上办事</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
                 </ul>
             </div>
         </div>
@@ -79,21 +66,24 @@
             <div class="home-foot-content">
                 <div class="foot-link">
                     <span>友情链接:</span>
-                    <a>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
                         <img src="../public/img/7.jpg">
                     </a>
-                    <a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
                         <img src="../public/img/8.jpg">
                     </a>
-                    <a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
                         <img src="../public/img/9.jpg">
                     </a>
-                    <a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
                         <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
                     </a>
                 </div>
                 <div class="foot-contact-us">
-                    <p>
+                    <p class="first-line">
                         <span>
                             <a>联系我们</a>
                         </span>
@@ -105,18 +95,18 @@
                         </span>
                     </p>
 
-                    <p>
+                    <p class="second-line">
                         <span>
-                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
                         </span>
                     </p>
 
-                    <p>
+                    <p class="third-line">
                         <span>
                             地址：南宁市兴宁区民主路49号 邮政编码 530012
                         </span>
                     </p>
-                    <p>
+                    <p class="fourth-line">
                         <span>
                             建议使用IE9以上版本、360、Chrome浏览器打开
                         </span>
