--- a/component/pagination.html
+++ b/component/pagination.html
@@ -1,7 +1,7 @@
 <!-- 自定义分页组件，请根据自身实际使用修改 -->
 
 <head>
-    <title>广西壮族自治区退役军人事务所</title>
+    <title>广西壮族自治区退役军人事务厅</title>
     <meta charset="utf-8">
     <!-- 不使用该语句会导致ie浏览器样式无法使用部分正常的css样式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
