--- a/component/zwgkPage.html
+++ b/component/zwgkPage.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>广西壮族自治区退役军人事务所</title>
+    <title>广西壮族自治区退役军人事务厅</title>
     <meta charset="utf-8">
     <!-- 不使用该语句会导致ie浏览器样式无法使用部分正常的css样式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,45 +13,25 @@
     <link rel="stylesheet" href="../css/home/base.css">
     <link rel="stylesheet" href="../css/home/head.css">
     <link rel="stylesheet" href="../css/home/foot.css">
+    <!-- 下面这个css可以单独提取公共样式 -->
     <link rel="stylesheet" href="../css/newsPage.css">
     <link rel="stylesheet" href="../css/zwgkPage/zwgkPage.css">
-
-    <!-- <link id="ie_css" rel="stylesheet" href="">
-
-    <script>
-        function getBrowser() {
-            var ua = window.navigator.userAgent;
-            var isIE = window.ActiveXObject != undefined && ua.indexOf("MSIE") != -1;
-            var isFirefox = ua.indexOf("Firefox") != -1;
-            var isOpera = window.opr != undefined;
-            var isChrome = ua.indexOf("Chrome") && window.chrome;
-            var isSafari = ua.indexOf("Safari") != -1 && ua.indexOf("Version") != -1;
-            if (isIE) {
-                return "IE";
-            } else if (isFirefox) {
-                return "Firefox";
-            } else if (isOpera) {
-                return "Opera";
-            } else if (isChrome) {
-                return "Chrome";
-            } else if (isSafari) {
-                return "Safari";
-            } else {
-                return "Unkown";
-            }
-        }
-
-        if (getBrowser() == "IE") {
-            document.getElementById("ie_css").href = "../css/newsPage_ie.css";
-        } else {
-            document.getElementById("ie_css").href = "../css/newsPage.css";
-        }
-    </script> -->
 </head>
 
 <body>
     <script type="text/javascript" src="../js/zwgkPage.js"></script>
     <script type="text/javascript" src="../js/tool.js"></script>
+
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
 
     <div class="home-page">
         <!-- 头部 -->
@@ -68,20 +48,7 @@
 
                         <a>收藏本站</a>
                     </span>
-                    <span class="middle">
 
-                        <a>邮件系统</a>
-                    </span>
-                    <span class="middle">
-                        <a>OA系统</a>
-                    </span>
-
-                    <span class="last">
-                        字体:
-                        <span>
-                            简体
-                        </span>
-                    </span>
                 </span>
 
                 <span class="head-search">
@@ -98,9 +65,9 @@
                     <li><a href="../index.html">网站首页</a></li>
                     <li><a href="../component/newsPage.html">新闻动态</a></li>
                     <li><a href="../component/zwgkPage.html">政务公开</a></li>
-                    <li><a>专题聚焦</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
                     <li><a href="../component/hdjl.html">互动交流</a></li>
-                    <li><a class="nav-last-item">网上办事</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
                 </ul>
             </div>
         </div>
@@ -130,6 +97,12 @@
                         </div>
                     </div>
                     <ul id="cust-nav-first" class="cust-nav">
+                        <li>
+                            领导之窗 >
+                        </li>
+                        <li>
+                            机构职能 >
+                        </li>
                         <li>
                             政策法规 >
                         </li>
@@ -168,21 +141,24 @@
             <div class="home-foot-content">
                 <div class="foot-link">
                     <span>友情链接:</span>
-                    <a>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
                         <img src="../public/img/7.jpg">
                     </a>
-                    <a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
                         <img src="../public/img/8.jpg">
                     </a>
-                    <a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
                         <img src="../public/img/9.jpg">
                     </a>
-                    <a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
                         <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
                     </a>
                 </div>
                 <div class="foot-contact-us">
-                    <p>
+                    <p class="first-line">
                         <span>
                             <a>联系我们</a>
                         </span>
@@ -194,18 +170,18 @@
                         </span>
                     </p>
 
-                    <p>
+                    <p class="second-line">
                         <span>
-                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
                         </span>
                     </p>
 
-                    <p>
+                    <p class="third-line">
                         <span>
                             地址：南宁市兴宁区民主路49号 邮政编码 530012
                         </span>
                     </p>
-                    <p>
+                    <p class="fourth-line">
                         <span>
                             建议使用IE9以上版本、360、Chrome浏览器打开
                         </span>
@@ -232,16 +208,22 @@
             var attribute = ""
             var subTitle = ""
             if (item.activeIndex == 0) {
+                attribute = ""
+                subTitle = "领导之窗"
+            } else if (item.activeIndex == 1) {
+                attribute = ""
+                subTitle = "机构职能"
+            } else if (item.activeIndex == 2) {
                 attribute = "first_tabBar"
                 subTitle = "政策法规"
-            } else if (item.activeIndex == 1) {
+            } else if (item.activeIndex == 3) {
                 attribute = "second_tabBar"
                 subTitle = "政策解读"
-            } else if (item.activeIndex == 2) {
-                attribute = "third_tabBar"
+            } else if (item.activeIndex == 4) {
+                attribute = ""
                 subTitle = "党建工作"
             } else {
-                attribute = "fourth_tabBar"
+                attribute = ""
                 subTitle = "人事信息"
             }
 
@@ -294,6 +276,10 @@
                         // 防止页面高度发生变化时跳动bug
                         setTimeout(function () {
                             $("#news").html(str);
+                        }, 100)
+                    } else {
+                        setTimeout(function () {
+                            $("#news").html("<p>我厅尚处在组建阶段，本网站部分内容和功能正在建设中，敬请期待！</p>");
                         }, 100)
                     }
                 },
